Fix z-index for fourth section title to appear above bottom image

--- a/public/style.css
+++ b/public/style.css
@@ -361,7 +361,7 @@ body {
     width: 527px;
     height: 141px;
     line-height: 0.697;
-    z-index: 1;
+    z-index: 2;
 }
 
 [data-show="PFERDE"] .section-title:nth-of-type(4) {
